hphp/test/slow/compilation/switch-default-multiple.php.expectf
Fatal error: Switch statements may only contain one default: clause in %s/switch-default-multiple.php on line 8

